--- a/intern/cycles/app/CMakeLists.txt
+++ b/intern/cycles/app/CMakeLists.txt
@@ -15,7 +15,7 @@ set(LIBRARIES
 	cycles_subd
 	cycles_graph
 	cycles_util
-	bcd_library
+	bcd
 	${BLENDER_GL_LIBRARIES}
 	${CYCLES_APP_GLEW_LIBRARY}
 	${PNG_LIBRARIES}
